@@ -28,8 +28,7 @@ public:
     
   // The constructor.
   MatlabProgram (const Iterate& x0, const CallbackFunctions& funcs,
-		 const Options& options, Iterate& x, const mxArray* auxdata,
-		 MatlabInfo& info);
+		 const Options& options, Iterate& x, MatlabInfo& info);
     
   // The destructor.
   virtual ~MatlabProgram();
@@ -98,7 +97,6 @@ protected:
   const CallbackFunctions& funcs;    // Callback routines.
   const Options&           options;  // Further program info.
   Iterate&                 x;        // Current point.
-  const mxArray*           auxdata;  // The auxiliary data.
   MatlabInfo&              info;     // Info passed back to MATLAB.
 
   // These next two members store information about the structure of
